k8n/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-server-svc
  namespace: mlops-project
spec:
  selector:
    app: ml-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
