k8n/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ml-server-route
  namespace: mlops-project
spec:
  parentRefs:
  - name: ml-server-gw
    namespace: mlops-project
  hostnames:
  - ml-server
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
    - name: ml-server-svc
      namespace: mlops-project
      port: 8000
